--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h4>Learning</h4>
             </div>
             <p class="Published">Published 21 Dec 2023</p>
-            <h1 class="title">HTML & CSS foundations</h1>
+            <h1 class="title animated-text">HTML & CSS foundations</h1>
             <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
             <div class="footerCard">
                 <img src="img/userpic.png" alt="">
